--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation project(':protocol')
     implementation project(':token-authentication')
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
